--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Teaching Factory Peternakan Sapi Perah & Potong Polije - Menyediakan produk susu segar, daging sapi premium, dan layanan edukasi peternakan modern di Jember, Jawa Timur.">
+    <meta name="keywords" content="peternakan sapi, susu sapi, daging sapi, polije, teaching factory, jember, jawa timur">
+    <meta name="author" content="Peternakan Polije">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="Peternakan Sapi Perah & Potong Polije - Teaching Factory">
+    <meta property="og:description" content="Teaching Factory yang menghadirkan produk berkualitas tinggi dengan standar modern dan edukasi terbaik untuk mahasiswa.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://peternakan.polije.ac.id">
     <title>Peternakan Sapi Perah & Potong Polije - Teaching Factory</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -1152,28 +1160,26 @@
             <h2 class="section-title">Hubungi Kami</h2>
             <p class="section-subtitle">Mari berkolaborasi untuk kemajuan peternakan dan pendidikan di Indonesia.</p>
             <div class="contact-content">
-                <div class="contact-details">
-                    <div class="contact-info">
-                        <div class="contact-item">
-                            <div class="contact-icon"><i class="fas fa-map-marker-alt"></i></div>
-                            <div>
-                                <h4>Alamat</h4>
-                                <p>UPT Pengembangan Pertanian Terpadu, Politeknik Negeri Jember<br>Jl. Mastrip No. 59, Jember, Jawa Timur</p>
-                            </div>
+                <div class="contact-info">
+                    <div class="contact-item">
+                        <div class="contact-icon"><i class="fas fa-map-marker-alt"></i></div>
+                        <div>
+                            <h4>Alamat</h4>
+                            <p>UPT Pengembangan Pertanian Terpadu, Politeknik Negeri Jember<br>Jl. Mastrip No. 59, Jember, Jawa Timur</p>
                         </div>
-                        <div class="contact-item">
-                            <div class="contact-icon"><i class="fas fa-phone"></i></div>
-                            <div>
-                                <h4>Telepon</h4>
-                                <p>+62 331 333 1234</p>
-                            </div>
+                    </div>
+                    <div class="contact-item">
+                        <div class="contact-icon"><i class="fas fa-phone"></i></div>
+                        <div>
+                            <h4>Telepon</h4>
+                            <p>+62 331 333 1234</p>
                         </div>
-                        <div class="contact-item">
-                            <div class="contact-icon"><i class="fas fa-envelope"></i></div>
-                            <div>
-                                <h4>Email</h4>
-                                <p>peternakan@polije.ac.id</p>
-                            </div>
+                    </div>
+                    <div class="contact-item">
+                        <div class="contact-icon"><i class="fas fa-envelope"></i></div>
+                        <div>
+                            <h4>Email</h4>
+                            <p>peternakan@polije.ac.id</p>
                         </div>
                     </div>
                     <div class="contact-form">
@@ -1201,6 +1207,15 @@
             </div>
         </div>
     </section>
+
+    <!-- Lightbox -->
+    <div id="lightbox" class="lightbox">
+        <span class="close-btn">&times;</span>
+        <span class="prev-btn">&lt;</span>
+        <span class="next-btn">&gt;</span>
+        <img class="lightbox-content" id="lightbox-img">
+    </div>
+
     <!-- Footer -->
     <footer class="footer">
         <div class="footer-container">
@@ -1447,7 +1462,5 @@
         });
     </script>
 </body>
-
-</html>
 
 </html>
