chore: Add "HALO DUNIA" comment.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
 
+    <!-- HALO DUNIA -->
+
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
